@@ -1,5 +1,5 @@
 #
-# "$Id: Makedefs.in,v 1.36.2.17 2003/04/17 14:21:33 mike Exp $"
+# "$Id: Makedefs.in,v 1.36.2.18 2003/06/14 13:35:49 mike Exp $"
 #
 #   Common makefile definitions for the Common UNIX Printing System (CUPS).
 #
@@ -89,7 +89,7 @@ CFLAGS		=	$(RC_CFLAGS) @CPPFLAGS@ @CFLAGS@ -I.. $(OPTIONS)
 COMMONLIBS	=	@COMMONLIBS@
 CXXFLAGS	=	$(RC_CFLAGS) @CPPFLAGS@ @CXXFLAGS@ -I.. $(OPTIONS)
 CXXLIBS		=	@CXXLIBS@
-DSOFLAGS	=	@LDFLAGS@ @DSOFLAGS@
+DSOFLAGS	=	@DSOFLAGS@
 DSOLIBS		=	@DSOLIBS@ $(COMMONLIBS)
 IMGLIBS		=	@IMGLIBS@ -lm
 LDFLAGS		=	-L../cups -L../filter $(RC_CFLAGS) @LDFLAGS@ $(OPTIM)
@@ -183,5 +183,5 @@ MAN8DIR		=	@MAN8DIR@
 
 
 #
-# End of "$Id: Makedefs.in,v 1.36.2.17 2003/04/17 14:21:33 mike Exp $"
+# End of "$Id: Makedefs.in,v 1.36.2.18 2003/06/14 13:35:49 mike Exp $"
 #
